force-app/main/default/objects/Departure_Point__c/fields/APTS_Default_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>APTS_Default_Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Default Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>