force-app/main/default/objects/Departure_Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Product__c</columns>
    <columns>Market__c</columns>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>LT</value>
    </filters>
    <label>All</label>
</ListView>